숫자 기본타입 학습(재업)

--- a/BaseNumberType.ipynb
+++ b/BaseNumberType.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOt/GM6bX2wXR/FQtOHepil",
+      "authorship_tag": "ABX9TyMOERnk/Z8S/iOATc2vmzIE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -297,6 +297,47 @@
           "text": [
             "2\n",
             "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 10\n",
+        "a *= 2  # a = a * 2, 즉 a는 20이 된다.\n",
+        "\n",
+        "b = 20\n",
+        "b /= 4  # b = b / 4, 즉 b는 5.0이 된다. (나눗셈은 항상 실수로 결과가 나온다)\n",
+        "\n",
+        "c = 7\n",
+        "c %= 3  # c = c % 3, 즉 c는 1이 된다. (나머지 연산)\n",
+        "\n",
+        "d = 10\n",
+        "d //= 3  # d = d // 3, 즉 d는 3이 된다. (몫 연산)\n",
+        "\n",
+        "print(a)  # 출력: 20\n",
+        "print(b)  # 출력: 5.0\n",
+        "print(c)  # 출력: 1\n",
+        "print(d)  # 출력: 3\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s_z-vj3_I97v",
+        "outputId": "4da90ce8-8b88-4864-9db6-445b3df0b29d"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20\n",
+            "5.0\n",
+            "1\n",
+            "3\n"
           ]
         }
       ]
