숫자 기본타입 학습

--- a/점프 투 파이썬 02장/BaseNumberType.ipynb
+++ b/점프 투 파이썬 02장/BaseNumberType.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOERnk/Z8S/iOATc2vmzIE",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMOERnk/Z8S/iOATc2vmzIE"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,18 +16,8 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/KWJ30/pythonStudy25/blob/master/BaseNumberType.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -75,7 +64,7 @@
         "id": "Ht1flV7i8K3I",
         "outputId": "988df007-3fdc-485a-c8f7-31167d058a00"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,7 +96,7 @@
         "id": "djK50cAR9CoX",
         "outputId": "f3116099-86d2-4a4d-c44e-b5b671991659"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -139,7 +128,7 @@
         "id": "NJCvp-Hd9gL4",
         "outputId": "d0d497ca-c9e0-482c-e370-999859521a6f"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,7 +158,7 @@
         "id": "rWnYZVE0-WeY",
         "outputId": "ae9f8870-7b51-47c5-c611-8e70790d8186"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,7 +187,7 @@
         "id": "K-w11WW5AmX_",
         "outputId": "f623a269-302d-49af-b607-f219816f1fc3"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,7 +219,7 @@
         "id": "SjcrHbIaGHZo",
         "outputId": "b14074c2-deed-4993-9ae4-f07563232669"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +246,7 @@
         "id": "XVQByrSoHSFH",
         "outputId": "78e03518-1940-4dcd-85a8-ada0b7d5412b"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -289,7 +278,7 @@
         "id": "Ub6qU2ojHa3X",
         "outputId": "d43e58ac-9f25-412b-dca7-b568b9546286"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -328,7 +317,7 @@
         "id": "s_z-vj3_I97v",
         "outputId": "4da90ce8-8b88-4864-9db6-445b3df0b29d"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
