--- a/if_conditional.ipynb
+++ b/if_conditional.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNlfV4FFI784PJ8qiACi2vb",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNaT6zGC75CLz6moFs1Hi+y"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,14 +16,15 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
+      "cell_type": "code",
       "source": [
-        "<a href=\"https://colab.research.google.com/github/KWJ30/pythonStudy25/blob/master/if_conditional.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
+        "# if문은 제어문으로 참, 거짓을 판단하여 흐름을 조절함"
+      ],
+      "metadata": {
+        "id": "BZ8Cb_r1Qc7h"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
