--- a/점프 투 파이썬 02장/BaseBoolType.ipynb
+++ b/점프 투 파이썬 02장/BaseBoolType.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPT9WiE6XAmaleSsz6cuK85",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPT9WiE6XAmaleSsz6cuK85"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/KWJ30/pythonStudy25/blob/master/BaseBoolType.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "source": [
