--- a/점프 투 파이썬 03장/03-1.if_conditional.ipynb
+++ b/점프 투 파이썬 03장/03-1.if_conditional.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMc1Kc4peTkKtd0xCwAiW+B"
+      "authorship_tag": "ABX9TyM8QiJr1rK9JRRrD0s1uRVo"
     },
     "kernelspec": {
       "name": "python3",
@@ -34,6 +34,59 @@
       "metadata": {
         "id": "8UR5U46ZZUYq"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "money = int(input(\"현재 얼마있나요????\"))\n",
+        "print(\"현재 %d원 있네요\" %money)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oexYd5_ddR8p",
+        "outputId": "91c922f9-8c4f-4627-f552-2ee399fe92f5"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "현재 얼마있나요????2456\n",
+            "현재 2456원 있네요\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "money = int(input(\"현재 얼마있나요????\"))\n",
+        "if money >= 3000:\n",
+        "    print(\"택시를 타고 가라\")\n",
+        "else:\n",
+        "    print(\"걸어가라\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1Prr8RUeaKyS",
+        "outputId": "ed1d59a2-fafc-464f-e1f2-a3880b1d0e73"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "현재 얼마있나요????3500\n",
+            "택시를 타고 가라\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
